Made redeirect sorting significant

--- a/README
+++ b/README
@@ -4,5 +4,4 @@ A Ruby redirect server build on Rack
 
 ==Example
 
-  require 'redirect'
-  redirect({ '/old_url' => '/new_url'})
+% ruby example.rb  
