--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,9 @@
+=== 0.0.2 / 2009-02-21
+
+* 1 major enhancement
+
+  * Only require Hoe if installed
+  
 === 0.0.1 / 2009-02-08
 
 * 1 major enhancement
