--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,9 @@
+=== 0.3.2 / 2009-03-03
+
+* 1 major enhancement
+
+  * Added generation of tests to the app generator
+
 === 0.3.0 / 2009-02-24
 
 * 1 major enhancement
